# personal-event-summary

./: .gitignore  404.html  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
analysis/: 001-plan-validation-report.md  event-tech-live-csv-summary.md  event-tech-live-data-insights.md  event-tech-live-quick-reference.md  exploration-report-2025-11-05.md  exploration-report-2025-11-06-plan-003-exploration.md  (+28 more)
python/: pyproject.toml  requirements.txt
python/config/: events.json
python/scripts/: validate_scraped_colors.py
python/src/event_style_scraper/: __init__.py  __main__.py  cli.py  tools.py  types.py
python/src/event_style_scraper/crews/content_creation_crew/: __init__.py  content_creation_crew.py
python/src/event_style_scraper/crews/content_creation_crew/config/: agents.yaml  tasks.yaml
python/src/event_style_scraper/crews/style_extraction_crew/: __init__.py  style_extraction_crew.py
python/src/event_style_scraper/crews/style_extraction_crew/config/: agents.yaml  tasks.yaml
python/src/event_style_scraper/flows/: __init__.py  style_scraping_flow.py
python/src/event_style_scraper/tools/: __init__.py  playwright_scraper.py
python/style-configs/: event-tech-live-2025.json  eventtechlive-com.json  example-com.json
python/tests/fixtures/: simple-page.html
python/tests/integration/: test_real_scraping.py
python/tests/unit/: test_cli.py  test_content_creation_crew.py  test_playwright_scraper.py  test_style_extraction_crew.py  test_style_scraping_flow.py  test_tools.py  test_types.py
(+101 files in other folders)
